--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
